# quant-seergo

./: .env.example  .gitignore  ERROR_CODES.md  README.md  STANDARD.md  STANDARDS.md  alembic.ini  analysis_dimension_result.py  marketing_report.py  marketing_report_qa.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
alembic/: env.py
alembic/versions/: 2025_11_26_1349_5cf8f5a995cc_init_db.py  2025_11_26_1407_f360b02a680c_init_db.py
app/: __init__.py  api_router.py  main.py
app/api/: __init__.py  deps.py
app/core/: __init__.py  config.py  error_code.py  exceptions.py  logging.py  middleware.py  redis.py  response.py  security.py
app/db/: __init__.py  session.py
app/db/models/: __init__.py  analysis_dimension_result.py  base.py  insights_report.py  insights_report_qa.py  marketing_report.py  marketing_report_qa.py  operations_report.py  user.py  user_profile.py  user_social.py
app/db/repositories/: __init__.py  base.py
app/domains/analysis/: constants.py  dependencies.py  repository.py  router.py  schemas.py  service.py
app/domains/auth/: constants.py  router.py  schemas.py  service.py
app/domains/insights/: constants.py  repository.py  router.py  schemas.py  service.py
app/domains/marketing/: constants.py  repository.py  router.py  schemas.py  service.py
app/domains/operations/: constants.py  repository.py  router.py  schemas.py  service.py
app/domains/users/: constants.py  dependencies.py  repository.py  router.py  schemas.py  service.py
app/utils/: masking.py
docs/: api_standards.md  project_structure.md
tests/: conftest.py
tests/integration/: test_health.py  test_user_router.py
tests/unit/: test_user_service.py
