# File: pyproject.toml
# Description: 项目依赖与工具配置文件
# Author: jinmozhe
# Created: 2025-11-24

[project]
name = "fastapi-v3-project"
version = "0.1.0"
description = "FastAPI V3.0 Standard Project (Async + SQLAlchemy 2.0 + UUID v7 + Loguru)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "jinmozhe", email = "dev@example.com"}
]

# 核心运行时依赖 (严格对齐 2025 年末稳定版本基线)
dependencies = [
    "fastapi>=0.121.0",          # Web 框架 (0.121+ 稳定基线)
    "uvicorn[standard]>=0.38.0", # ASGI 服务器
    "sqlalchemy[asyncio]>=2.0.44", # ORM (Typed) + Asyncio 扩展 (greenlet)
    "asyncpg>=0.30.0",           # PostgreSQL 异步驱动
    "pydantic>=2.12.0",          # 数据验证 v2
    "pydantic-settings>=2.12.0", # 配置管理
    "orjson>=3.10.0",            # 高性能 JSON 序列化 (强制默认)
    "loguru>=0.7.2",             # 集中式日志
    "uuid6>=2024.1.12",          # UUID v7 生成库
    "alembic>=1.17.0",           # 数据库迁移
    "python-multipart>=0.0.12",  # Form data 支持
    "passlib[bcrypt]>=1.7.4",    # 密码哈希
]

# 开发与测试依赖
[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",             # 测试框架
    "pytest-asyncio>=0.23.0",    # 异步测试插件
    "httpx>=0.27.0",             # 异步 HTTP 客户端 (测试用)
    "ruff>=0.6.0",               # 代码格式化与 Lint (0.6.0+ 支持 ASYNC 规则)
    "mypy>=1.10.0",              # 静态类型检查
    "pre-commit>=3.7.0",         # Git Hooks
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ------------------------------------------------------------------------------
# Tool Configuration (工具配置)
# ------------------------------------------------------------------------------

# 1. Pytest 配置
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --asyncio-mode=auto"
testpaths = [
    "tests",
]
python_files = "test_*.py"
# 新增下面这一行，指定默认 fixture 作用域为 session
asyncio_default_fixture_loop_scope = "session"

# 2. Ruff 配置 (严格模式)
[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort (import sorting)
    "B",     # flake8-bugbear (常见 bug 模式)
    "C4",    # flake8-comprehensions (列表推导式优化)
    "UP",    # pyupgrade (自动升级 Python 语法)
    "T20",   # flake8-print (禁止使用 print)
    "ASYNC", # flake8-async (异步代码检查)
    "BLE",   # flake8-blind-except (禁止捕获所有异常)
]
ignore = [
    "E501", # 忽略行长度限制 (由 ruff format 自动处理)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# 3. Mypy 配置 (高严格度类型检查)
[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

# 严禁全局忽略丢失的导入，强制要求类型安全
ignore_missing_imports = false
disallow_untyped_defs = true     # 强制要求函数定义有类型注解
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

# 对特定库的豁免 (如果某些库确实没有类型存根，在此处添加)
[[tool.mypy.overrides]]
module = [
    "uuid6.*", # 假设 uuid6 暂时可能缺失 strict type stub，按需豁免
]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
